--- a/index.html
+++ b/index.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>How I Learn Best</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Smart Learning Analyzer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-    <h1>🧠 How I Learn Best Analyzer</h1>
-    <p>Answer the questions to discover your learning style</p>
+  <h1>🧠 How I Learn Best</h1>
+  <p class="subtitle">Discover your personalized learning style</p>
 
-    <form id="quizForm">
-        <div class="question">
-            <p>1. When learning something new, I prefer:</p>
-            <label><input type="radio" name="q1" value="reading" required> Reading notes or books</label>
-            <label><input type="radio" name="q1" value="watching"> Watching videos</label>
-            <label><input type="radio" name="q1" value="practicing"> Doing it myself</label>
-        </div>
+  <form id="quizForm">
 
-        <div class="question">
-            <p>2. I remember things better when I:</p>
-            <label><input type="radio" name="q2" value="reading" required> Read explanations</label>
-            <label><input type="radio" name="q2" value="watching"> See demonstrations</label>
-            <label><input type="radio" name="q2" value="practicing"> Practice repeatedly</label>
-        </div>
+    <h3>Basic Details</h3>
+    <input type="text" placeholder="Your Name (optional)">
 
-        <div class="question">
-            <p>3. In exams, I understand concepts best by:</p>
-            <label><input type="radio" name="q3" value="reading" required> Revising notes</label>
-            <label><input type="radio" name="q3" value="watching"> Remembering visuals</label>
-            <label><input type="radio" name="q3" value="practicing"> Solving problems</label>
-        </div>
+    <h3>Answer the following</h3>
 
-        <button type="submit">Analyze</button>
-    </form>
+    <div class="question">
+      <p>1. When studying a new topic, I prefer:</p>
+      <label><input type="radio" name="q1" value="reading" required> Reading notes/books</label>
+      <label><input type="radio" name="q1" value="watching"> Watching videos</label>
+      <label><input type="radio" name="q1" value="practicing"> Practicing problems</label>
+    </div>
 
-    <div id="result" class="result hidden"></div>
+    <div class="question">
+      <p>2. I remember concepts best when I:</p>
+      <label><input type="radio" name="q2" value="reading" required> Write and revise</label>
+      <label><input type="radio" name="q2" value="watching"> Visualize diagrams</label>
+      <label><input type="radio" name="q2" value="practicing"> Apply concepts</label>
+    </div>
+
+    <div class="question">
+      <p>3. For exams, I rely more on:</p>
+      <label><input type="radio" name="q3" value="reading" required> Theory revision</label>
+      <label><input type="radio" name="q3" value="watching"> Visual memory</label>
+      <label><input type="radio" name="q3" value="practicing"> Problem solving</label>
+    </div>
+
+    <div class="question">
+      <p>4. I feel confident after studying when I:</p>
+      <label><input type="radio" name="q4" value="reading" required> Read thoroughly</label>
+      <label><input type="radio" name="q4" value="watching"> See examples</label>
+      <label><input type="radio" name="q4" value="practicing"> Practice myself</label>
+    </div>
+
+    <button type="submit">Analyze My Learning Style</button>
+  </form>
+
+  <div id="result" class="hidden"></div>
 </div>
 
 <script src="script.js"></script>
